<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtherNews"
    android:orientation="vertical"

    >



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Here is some News Website of Bangladesh"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="52dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3"
        android:background="#FFFFFF"
        >

        <TextView
            android:id="@+id/prothomalo"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_shade1"
            android:gravity="center"
            android:text="@string/messageWithLink"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/jugantor"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/jugantor"
            android:background="@drawable/bottom_shade1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dailystar"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_shade1"
            android:gravity="center"
            android:text="@string/dailystar"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/bottom_shade"
        android:weightSum="3">

        <TextView
            android:id="@+id/inkilab"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_shade1"
            android:gravity="center"
            android:text="@string/Inkilab"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/manobjomin"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_shade1"
            android:gravity="center"
            android:text="@string/Manobjomin"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/somokal"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_shade1"
            android:gravity="center"
            android:text="@string/Somokal"
            android:textStyle="bold" />

    </LinearLayout>




    <ImageView
        android:layout_width="match_parent"
        android:layout_height="667dp"
        android:layout_gravity="bottom"
        android:scaleType="centerCrop"
        android:src="@drawable/picc"
        />

</LinearLayout>